[package]
name = "plot-commands"
version = "0.1.0"
edition = "2021"
authors = ["Roy <varonroy@gmail.com>"]
repository = "https://github.com/varonroy/plot-commands"

[features]
serde = ["dep:serde"]
builder = []
plotters = ["dep:plotters"]
all = ["builder", "plotters"]
default = ["serde"]

[dependencies]
derive_more = "0.99.18"
itertools = "0.13.0"
rgb = { version = "^0.8.34", features = ["serde"] }

plotters = { version = "^0.3.4", features = ["image"], optional = true }
image = { version = "^0.24.0" }
float-ord = "0.3.2"
serde = { version = "1.0.203", features = ["derive"], optional = true}




# TODO: use `enable-features` when it will be added to Cargo.
# https://github.com/rust-lang/cargo/issues/4663
# https://github.com/rust-lang/rfcs/pull/3374
# [[example]]
# name = "simple-plot"
# required-features = [ "builder", "plotters" ]
# enable-features = [ "builder", "plotters" ]
